--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "generate": "yarn drizzle-kit generate",
+    "migrate": "yarn drizzle-kit migrate",
+    "push": "node -r esbuild-register src/db/migrate.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "drizzle-orm": "^0.38.2",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1"
   }
 }
