--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/pg": "^8.11.10",
